fix overlapping media queries breaking dropdown nav at 900px

--- a/src/components/NavigationBar/style.scss
+++ b/src/components/NavigationBar/style.scss
@@ -113,9 +113,9 @@
 }
 // Styling for menu based nav bar
 
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 901px) {
   .mobile-links {
-    display: none !important;
+    display: none;
   }
 }
 
