--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -8,7 +8,7 @@ html {
 }
 
 * {
-  scroll-margin-top: 78px;
+  scroll-margin-top: 88px;
 }
 
 body {
